--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
     position:absolute;
     background: #FFFFFF;
     box-shadow: 0px 9px 12px rgba(0, 0, 0, 0.25);
-    width: 1440px;
+    width: 100%;
     height: 104px;  
     left: 0px;
     top: 0px;
