--- a/style.css
+++ b/style.css
@@ -29,13 +29,16 @@ body {
 
 .logo-holder{
     position:absolute;
-    background: #FFFFFF;
+    background: #4eb40a;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 31px;
     width: 367px;
     height: 80px;
-    left: 532px;
-    top: 14px;
+    top: -720px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
 }
 
 .logo {
