--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik+Moonrocks&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 html, body {
+    font-family: 'Rubik Moonrocks', cursive;
     max-width: 100%;
     overflow-x: hidden;
 }
@@ -28,6 +31,7 @@ body {
 }
 
 .logo-holder{
+    font-family: 'Rubik Moonrocks', cursive;
     position:absolute;
     background: #bec2bd;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -39,6 +43,7 @@ body {
 }
 
 .logo {
+    font-family: 'Bebas Neue', cursive;
     text-align: left;
     margin-inline: -56px;
 }
@@ -231,14 +236,13 @@ nav .logo{
 }
 
 #textbox {
+    font-family: 'Rubik Moonrocks', cursive;
     border: 4px solid rgb(72, 185, 28);
     width: 55%;
     min-height: 50px;
+    margin-top: 15px;
     display: table;
     border-radius: 10px;
-    text-align: center;
-    margin: auto;
-    margin-top: 15px;
 }
 
 #img {
