--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik+Moonrocks&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 html, body {
     max-width: 100%;
     overflow-x: hidden;
@@ -41,6 +43,7 @@ body {
 .logo {
     text-align: left;
     margin-inline: -56px;
+    font-family: 'Bebas Neue', cursive;
 }
 
 .wrapper{
@@ -231,6 +234,7 @@ nav .logo{
 }
 
 #textbox {
+    font-family: 'Rubik Moonrocks', cursive;
     border: 4px solid rgb(72, 185, 28);
     width: 55%;
     min-height: 50px;
