--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
 
 .logo-holder{
     position:absolute;
-    background: #bec2bd;
+    background: #8be075;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 31px;
     width: 367px;
