--- a/style.css
+++ b/style.css
@@ -234,7 +234,7 @@ nav .logo{
 }
 
 #textbox {
-    font-family: 'Rubik Moonrocks', cursive;
+    font-family: 'Bebas Neue', cursive;
     border: 4px solid rgb(72, 185, 28);
     width: 55%;
     min-height: 50px;
